test/parser/basic/020.hac
// "016.hac"
// copy-modified from "020.hac"

import "001.hac";

bool bool;	// intentional error

